# country-risk-model

./: .env.example  .gitignore  README.md  diagnostics_HIGH.csv  diagnostics_LOW.csv
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  health.py  public.py
backend/app/core/: auth.py  logging.py  settings.py  supabase.py
backend/app/domain/: buckets.py  scoring.py  standardisation.py  training.py  types.py
backend/app/ingestion/: variable_sources.py  world_bank.py
backend/app/repositories/: model_version.py  published_score.py  raw_observations.py  reference.py  segment.py  snapshot.py
backend/app/schemas/: country.py  ingestion.py  model.py  snapshot.py  user.py  variable.py
backend/app/services/: ingestion.py  peer_analysis.py  snapshot.py  training.py  training_diagnostics.py
backend/scripts/: extract_reference_from_xlsx.py  extract_training_from_xlsx.py  ingest_world_bank.py  model_diagnostics.py  run_snapshot.py  train_baseline.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_public_countries.py  test_settings.py  test_supabase_factory.py
backend/tests/api/: test_admin_ingest.py  test_admin_models.py  test_public_scores.py
backend/tests/domain/: test_buckets.py  test_scoring.py  test_standardisation.py  test_training.py
backend/tests/ingestion/: test_ingestion_service.py  test_world_bank_client.py
backend/tests/integration/: test_baseline_training.py  test_world_bank_live.py
backend/tests/services/: test_snapshot_service.py
docs/: training-engine.md
frontend/: .env.example  package-lock.json  (+2 more)
(+39 files in other folders)
