[project]
name = "country-risk-backend"
version = "0.1.0"
description = "Country Risk Model backend"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "supabase>=2.4",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "structlog>=24.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "ruff>=0.3",
  "mypy>=1.8",
  "respx>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
